# headline-alerter

./: .env.example  .gitignore  LICENSE  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
docs/: pi-bootstrap.md  pi4-dev-server.md
docs/superpowers/plans/: 2026-05-03-headline-alerter-phase-0.md  2026-05-04-headline-alerter-phase-1a.md  2026-05-06-headline-alerter-phase-1b.md  2026-05-13-dashboard.md  2026-05-15-truth-social-ingestor.md  2026-05-16-macro-context.md
docs/superpowers/specs/: 2026-05-03-headline-alerter-design.md  2026-05-04-headline-alerter-phase-1a-design.md  2026-05-06-headline-alerter-phase-1b-design.md  2026-05-13-dashboard-design.md  2026-05-15-truth-social-ingestor-design.md  2026-05-16-macro-context-design.md
migrations/: 001_initial.sql  002_macro_context.sql
services/alerter/: Dockerfile  format.py  main.py  twilio_client.py
services/dashboard/: Dockerfile  api.py
services/ingestors/: Dockerfile
services/migrate/: Dockerfile
services/scorer/: Dockerfile  context_builder.py  main.py
services/shared/: anthropic_client.py  db.py  dlq.py  ingestor_base.py  kafka_client.py  logging.py  macro_context.py  models.py  scorer_prompts.py
tests/: conftest.py
tests/fixtures/: anthropic_score_response.json  cnbc_sample.xml  scored_event.json  truth_social_post.json  truth_social_reblog.json
tests/integration/: test_db.py  test_kafka_client.py  test_phase1a_e2e.py  test_phase1b_e2e.py
tests/unit/: test_smoke.py
tests/unit/alerter/: test_main.py  (+2 more)
tools/: alerter_smoke.py  scorer_smoke.py  smoke_test.py  tail.py
(+15 files in other folders)
